--- a/app/css/layout/layout.styl
+++ b/app/css/layout/layout.styl
@@ -164,6 +164,21 @@ md-input-container
 .text-left
   text-align left !important
 
+/* ------ TEMP login CART STYLE ----- */
+#login
+  background-color #f5f5f5
+
+#temp-checkout
+  .items-dashboard
+    margin-top 20px
+  .box-default
+    margin-bottom 40px
+    padding-bottom 0
+  .table, .table th, .table td
+    border-top 0 solid #ddd
+    border-bottom 0 solid #ddd
+
+
 
 #facebook-styl
   iframe
@@ -1227,50 +1242,6 @@ header
       font-weight 300
       font-size 22px
       margin 0
-
-.box-default
-  background-color green
-  -webkit-transition all ease 0.05s
-  -moz-transition all ease 0.05s
-  -ms-transition all ease 0.05s
-  -o-transition all ease 0.05s
-  transition all ease 0.05s
-  text-align center
-  color white
-  padding 20px
-  a
-    -webkit-transition all ease 0.05s
-    -moz-transition all ease 0.05s
-    -ms-transition all ease 0.05s
-    -o-transition all ease 0.05s
-    transition all ease 0.05s
-    text-align center
-    color white
-  a>img, h3
-    -webkit-transition all 1.9s ease
-    -moz-transition all 1.9s ease
-    -o-transition all 1.9s ease
-    -ms-transition all 1.9s ease
-  a
-    color white
-  .img-box
-    background-size cover
-    height 200px
-    background-repeat no-repeat
-    background-position center center
-    opacity 1
-
-  &:hover, &:focus
-    background #ac0000
-    a>img, h3
-      -webkit-transform scale(1.08)
-      -moz-transform scale(1.08)
-      -ms-transform scale(1.08)
-      -o-transform scale(1.08)
-      transform scale(1.08)
-    .img-box
-      opacity 1
-
 .save-info
   padding 25px 15px
 .widgets
