--- a/app/templates/auth/account-profile.html
+++ b/app/templates/auth/account-profile.html
@@ -15,95 +15,107 @@
                             <form class="padding form-horizontal" ng-submit="Profile.submitForm()">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-6">
-                                        <div class="form-group">
-                                            <label for="name">Nombre Completo</label>
+                                        <md-input-container md-no-float class="md-block">
                                             <input ng-model="Profile.profileData.businessName" type="text"
-                                                   class="form-control" id="name" name="name"
-                                                   placeholder="Nombre"
-                                                   required>
-                                        </div>
+                                                   id="name" name="name"
+                                                   placeholder="Nombre completo" required>
+                                        </md-input-container>
                                     </div>
                                     <div class="col-xs-12 col-sm-6">
-                                        <div class="form-group">
-                                            <label for="user">Usuario</label>
+                                        <md-input-container md-no-float class="md-block">
                                             <input ng-model="Profile.profileData.username" type="text"
                                                    class="form-control"
                                                    id="user" name="user"
                                                    placeholder="Usuario" disabled
                                                    required>
-                                        </div>
+                                        </md-input-container>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-6">
-                                        <div class="form-group">
-                                            <label for="email">Correo electrónico</label>
-
+                                        <md-input-container md-no-float class="md-block">
                                             <input ng-model="Profile.profileData.email" type="email"
-                                                   class="form-control"
                                                    id="email" name="email"
                                                    placeholder="Correo electrónico" required>
-                                        </div>
+                                        </md-input-container>
                                     </div>
                                     <div class="col-xs-12 col-sm-6">
-                                        <div class="form-group">
-                                            <label for="state">Estado</label>
-                                            <ui-select on-select="Profile.getCitiesByState($model)"
-                                                       title="Estado" ng-model="Profile.profileData.state"
-                                                       name="states"
-                                                       id="state" required>
-                                                <ui-select-match placeholder="Selecciona un Estado *..."
-                                                                 allow-clear="true">
-                                                    {{$select.selected.name}}
-                                                </ui-select-match>
-                                                <ui-select-choices
-                                                        repeat="state.id as state in Profile.states | filter: {name: $select.search}">
-                                                    <div ng-bind-html="state.name | highlight: $select.search"></div>
-                                                </ui-select-choices>
-                                            </ui-select>
-                                        </div>
+                                        <md-input-container class="md-block">
+                                            <label>Estado</label>
+                                            <md-select ng-model="Profile.state" md-on-open="Profile.getStates()"
+                                                       data-md-container-class="selectdemoSelectHeader"
+                                                       md-on-close="searchState='';Profile.clearCities()" name="state"
+                                                       required>
+                                                <md-select-header class="demo-select-header">
+                                                    <input ng-model="searchState" type="search"
+                                                           placeholder="Busca un estado..."
+                                                           class="demo-header-searchbox md-text"
+                                                           ng-keydown="$event.stopPropagation()">
+                                                </md-select-header>
+                                                <div layout="row" layout-align="center center"
+                                                     ng-if="Profile.busyState">
+                                                    <md-progress-circular md-mode="indeterminate"
+                                                                          class="md-warn md-default-theme"
+                                                                          style="transform: scale(1);"></md-progress-circular>
+                                                </div>
+                                                <md-option ng-repeat="state in Profile.states | filter:searchState"
+                                                           ng-value="state">
+                                                    {{state.name}}
+                                                </md-option>
+                                            </md-select>
+                                            <div class="errors" ng-messages="Profile.form.state.$error">
+                                                <div ng-message="required">Requerido</div>
+                                            </div>
+                                        </md-input-container>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-6">
-                                        <div class="form-group">
-                                            <label for="city">Ciudad</label>
-                                            <ui-select ng-model="Profile.profileData.city" id="city" name="cities"
-                                                       ng-required="Profile.profileData.state"
-                                                       ng-disabled="Profile.busyCity"
-                                                       title="Ciudad" required>
-                                                <ui-select-match placeholder="Selecciona una Ciudad *..."
-                                                                 allow-clear="true">
-                                                    {{$select.selected.name}}
-                                                </ui-select-match>
-                                                <ui-select-choices
-                                                        repeat="city.id as city in Profile.cities | filter: {name: $select.search}">
-                                                    <div ng-bind-html="city.name | highlight: $select.search"></div>
-                                                </ui-select-choices>
-                                            </ui-select>
-                                        </div>
+                                        <md-input-container class="md-block">
+                                            <label>Ciudad</label>
+                                            <md-select ng-model="Profile.city" md-on-open="Profile.getCitiesByState()"
+                                                       data-md-container-class="selectdemoSelectHeader"
+                                                       md-on-close="searchCity=''"
+                                                       ng-disabled="Profile.disableCity" name="city" required>
+                                                <md-select-header class="demo-select-header">
+                                                    <input ng-model="searchCity" type="search"
+                                                           placeholder="Busca una ciudad de {{Profile.state.name}}"
+                                                           class="demo-header-searchbox md-text"
+                                                           ng-keydown="$event.stopPropagation()">
+                                                </md-select-header>
+                                                <div layout="row" layout-align="center center" ng-if="Profile.busyCity">
+                                                    <md-progress-circular md-mode="indeterminate"
+                                                                          class="md-warn md-default-theme"
+                                                                          style="transform: scale(1);"></md-progress-circular>
+                                                </div>
+                                                <md-option ng-repeat="city in Profile.cities | filter:searchCity"
+                                                           ng-value="city">
+                                                    {{city.name}}
+                                                </md-option>
+                                            </md-select>
+                                            <div class="errors" ng-messages="Profile.form.city.$error">
+                                                <div ng-message="required">Requerido</div>
+                                            </div>
+                                        </md-input-container>
                                     </div>
                                     <div class="col-xs-12 col-sm-6">
-                                        <div class="form-group">
-                                            <label for="phone">Teléfono</label>
-                                            <input ng-model="Profile.profileData.phone" type="text" class="form-control"
-                                                   id="phone"
+                                        <md-input-container md-no-float class="md-block">
+                                            <input g-model="Profile.profileData.phone" type="text"
+                                                   ng-pattern="/^[(][0-9]{3}[)] [0-9]{3}-[0-9]{4}$/" id="phone"
                                                    name="phone"
                                                    placeholder="Teléfono" required>
-                                        </div>
+                                        </md-input-container>
                                     </div>
                                 </div>
 
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-6">
-                                        <div class="form-group">
-                                            <label for="mobile">Celular</label>
+                                        <md-input-container md-no-float class="md-block">
                                             <input ng-model="Profile.profileData.mobile" type="text"
-                                                   class="form-control"
-                                                   id="mobile"
+                                                   ng-pattern="/^[(][0-9]{3}[)] [0-9]{3}-[0-9]{4}$/" id="mobile"
                                                    name="password"
                                                    placeholder="Celular">
-                                        </div>
+                                        </md-input-container>
                                     </div>
                                     <div class="col-sm-6 text-right" style="padding-top: 35px;">
                                         <button type="submit" class="btn btn-danger"
