--- a/app/templates/shop/partials/cart-details.html
+++ b/app/templates/shop/partials/cart-details.html
@@ -1,94 +1,67 @@
-<div class="col-md-12">
-    <h3><i class="ion-ios-cart"></i> Resumen de tu pedido</h3>
-    <br>
-</div>
-<div class="col-md-12 text-center" ng-repeat="item in Payment.items">
-    <div class="row">
-        <div class="col-md-4">
-            <img ng-src="{{item.image}}" alt="" width="100">
-        </div>
-        <div class="col-md-8 list-inline items-incart text-right">
-            <div class="row">
-                <div class="col-md-5"><span>{{ item.name | characters: 30 }}</span></div>
-                <div class="col-md-3"><span class="pull-right">{{ item.price | currency }}</span></div>
-                <div class="col-md-4 no-padding"><span class="pull-right"> <strong>{{item.qty}}</strong> x  {{ item.qty * item.price | currency }}</span></div>
-            </div>
-        </div>
+<div id="temp-cart-details">
+    <div class="col-md-12">
+        <h4><i class="ion-ios-cart"></i> Resumen de tu pedido</h4>
+        <hr>
     </div>
-</div>
-<div class="col-sm-12 col-md-12" ng-controller="ShopCartCtrl as ShopCart">
-    <div class="row details-prodpay">
-        <!--<h4 class="text-center">Resumen de pedido</h4>-->
-        <div class="table-responsive">
-            <table class="table table-striped text-right">
-                <tbody>
-                <tr>
-                    <td>Subtotal</td>
-                    <td>{{ ShopCart.subTotal | currency}}</td>
-                </tr>
-                <tr>
-                    <td>Envío</td>
-                    <td>{{ShopCart.shipmentTotal | currency}}</td>
-                </tr>
-                <tr>
-                    <td>Total</td>
-                    <td><h3><span class="mxn">MXN</span>{{ ShopCart.total | currency }}</h3></td>
-                </tr>
-                <tr ng-if="ShopCart.promoTotal">
-                    <td>Descuento</td>
-                    <td>{{ShopCart.promoTotal | currency}}</td>
-                </tr>
-                </tbody>
-            </table>
-            <!--<a class="btn btn-success btn-cart btn-block" ng-click="ShopCart.processPurchase()">Procesar compra</a>-->
-        </div>
-        <div class="row" ng-if="Payment.shiping">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label for="name"></label>
-                    <input type="text" class="form-control"
-                           ng-model="ShopCart.coupon"
-                           name="name"
-                           placeholder="Código de cupón"
-                           id="name"/>
+    <div class="col-md-12 text-center" ng-repeat="item in Payment.items">
+        <div class="row">
+            <div class="col-md-3">
+                <img ng-src="{{item.image}}" alt="" width="100">
+            </div>
+            <div class="col-md-9 list-inline items-incart text-right">
+                <div class="row">
+                    <div class="col-md-5"><span>{{ item.name | characters: 30 }}</span></div>
+                    <div class="col-md-3"><span class="pull-right">{{ item.price | currency }}</span></div>
+                    <div class="col-md-4"><span class="pull-right"> <strong>{{item.qty}}</strong> x  {{ item.qty * item.price | currency }}</span>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <button ng-click="ShopCart.validCoupon()" class="btn btn-blue" style="margin-top: 7%"
-                        ng-if="!ShopCart.codeUsed">Aplicar
-                </button>
-                <button ng-click="ShopCart.removeCoupon()" class="btn btn-blue" style="margin-top: 7%"
-                        ng-if="ShopCart.codeUsed">Eliminar
-                </button>
-            </div>
         </div>
     </div>
-    <hr>
-    <div class="col-sm-12 col-md-12" ng-if="Payment.shiping">
-        <h4 class="text-center">Dirección de envío</h4>
-        <div class="details-prodpay">
+    <div class="col-sm-12 col-md-12" ng-controller="ShopCartCtrl as ShopCart">
+        <div class="row details-prodpay">
             <!--<h4 class="text-center">Resumen de pedido</h4>-->
             <div class="table-responsive">
-                <table class="table table-striped">
+                <table class="table table-striped text-right">
                     <tbody>
                     <tr>
-                        <td>Estado</td>
-                        <td>{{Payment.addresship.stateName}}</td>
+                        <td>Subtotal</td>
+                        <td>{{ ShopCart.subTotal | currency}}</td>
                     </tr>
                     <tr>
-                        <td>Ciudad</td>
-                        <td>{{Payment.addresship.cityName}}</td>
+                        <td>Envío</td>
+                        <td>{{ShopCart.shipmentTotal | currency}}</td>
                     </tr>
                     <tr>
-                        <td>Dirección</td>
-                        <td>{{Payment.addresship.address}}, {{Payment.addresship.neighborhood }}</td>
+                        <td>Total</td>
+                        <td><h3><span class="mxn">MXN</span>{{ ShopCart.total | currency }}</h3></td>
                     </tr>
-                    <tr>
-                        <td>CP</td>
-                        <td>{{Payment.addresship.zip}}</td>
+                    <tr ng-if="ShopCart.promoTotal">
+                        <td>Descuento</td>
+                        <td>{{ShopCart.promoTotal | currency}}</td>
                     </tr>
                     </tbody>
                 </table>
+                <!--<a class="btn btn-success btn-cart btn-block" ng-click="ShopCart.processPurchase()">Procesar compra</a>-->
+            </div>
+            <div class="container" ng-if="Payment.shiping">
+                <div class="row">
+                    <div class="col-md-9 no-padding">
+                        <md-input-container md-no-float class="md-block">
+                            <input type="text" ng-model="ShopCart.coupon"
+                                   name="name" placeholder="Código de cupón"
+                                   id="name">
+                        </md-input-container>
+                    </div>
+                    <div class="col-md-3 no-padding">
+                        <button ng-click="ShopCart.validCoupon()" class="btn btn-danger btn-block" style="margin-top: 7%"
+                                ng-if="!ShopCart.codeUsed">Aplicar
+                        </button>
+                        <button ng-click="ShopCart.removeCoupon()" class="btn btn-danger btn-block" style="margin-top: 7%"
+                                ng-if="ShopCart.codeUsed">Eliminar
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
