--- a/app/css/layout/responsive.styl
+++ b/app/css/layout/responsive.styl
@@ -257,368 +257,35 @@
 /* Mobile Layout: 320px. */
 
 @media only screen and (max-width: 767px)
-  .shopcart-qty > input
-    margin 0 auto
-  .hide-tablet
-    display none
-  .hide-desk
-    display inline 
-  .xs-hide
-    display none
-  .nav-user.nav > li > .shopping-cart i
-    font-size 33px
-  #section-promo
-    .item-promo
-      text-align center
-  .btn-product-detail
-    text-align center
-  .excerpt-shopping
-    padding-top 50px
-  .shopcart-qty
-    position re
-    margin auto 29.5%
-  .shopcart-delete
-    padding-bottom 15px
-  .prod-entry
-    padding 15px 6% 10px !important
-  .perfil
-    border-top 1px solid rgba(0, 0, 0, .075)
-  .detail-qty
-    margin-left 31%
-  .detail-price
-    text-align center !important
-  .product-info
-    height 235px
-  .content
-    margin-top 225px 
-  .header-title
-    height 80px
-  .header-title .title 
-    color #fff
-    font-size 2em
-    padding 20px 4px 2px
-  .ca-phone
-    display none
-  .services .box-service h3
-    text-align center
-  .register .reg-content .reg-descrip
-    font-size 18px
-  .shopping-cart
-    margin-top 15px
-  .navbar-info a, .navbar-info a > i
-    font-size 14px
-  .qty-cart
-    right 17%
-  .navbar-info
-    .col-sm-4 
-      text-align center
-  .header .navbar-default
-    height auto
-  .navbar-header
-    padding 0 0 25px  
-  #slider-area
-    background-color #444
-    height auto
-    position relative
-    .text-on-video
-      background rgba(156, 22, 29, 0.45)
-      position absolute
-      width 100%
-      height 100%
-      z-index 1
-      .text
-        margin-top 18%
-        text-align center
-        .btn
-          border 3px solid white
-          font-size 18px
-          font-weight bold
-        a
-          margin-right 15px
-          font-size 20px
-          color white
-        h1
-          text-shadow 0 0 10px rgba(0,0,0,0.5)
-          font-size 20px
-          color white
-        h3
-          color white
-          font-weight 300
-          text-shadow 0 0 10px rgba(0,0,0,0.5)
-          font-size 18px
-  .navbar-collapse
-    .mobile
-      display none
-  #products
-    text-align center
-  .nav-tabs > li
-    float none
-  .navbar-default
-    .container-fluid
-      padding-left 0
-      padding-right 0
-  .nav-tabs
-    width 100%
-  .tab-pane
-    width 100%
-    margin-top 0
-  .nav-top
-    .data-contact
-      padding 5px 0
-    .pull-left
-      float none !important
-    .pull-right
-      display none
-  .mail-top
-    margin-left -15px
-    margin-top 5px
-  header .nav-top i
-    font-size 12px
-    padding-left 10px
 
-  header .navbar-default .navbar-nav > li > a
-    font-size 18px
-    font-weight 300
-  .more-info .info-links a
-    line-height 35px
-  .carousel
-    margin-top 0
-  #footer_area .info
-    text-align center
-  #footer_area .info a
-    line-height 55px
-  .first-foo
-    text-align center !important
-  .download-app a > img
-    width 40%
-  .slider-img
-    height 150px
-    background-size 100%
-    background-position left
-  .box-gas
-    border-left none
-  header
-    width 100%
-    z-index 9999
-  .nav-main
-    border none !important
-  .nav-log
-    border none !important
-    .btn-white-clear
-      border none
-      font-size 18px
-  .main-bg-pages
-    display none
-  .box-widget
-    padding 0
-    border-left none
-    border none
-  .carousel-caption
-    top 0
-    padding-top 40px !important
-    background-color rgba(255,255,255.0.8)
-    width 100%
-    height 100%
-    .box-slide
-      width 100%
-      h1
-        font-size 28px
-      p
-        font-size 20px
-  .carousel-caption h1
-    font-size 22px
-  .carousel-caption p
-    font-size 16px
-  .boxes-project
-    margin-bottom 15px
-    text-align center
-    .work-description
-      margin-top 10px
-    &:nth-child(3)
-      .col-md-4,.col-sm-4
-        float none
-      .col-md-8,.col-sm-8
-        text-align right
-    &:nth-child(5)
-      .col-md-4,.col-sm-4
-        float none
-      .col-md-8,.col-sm-8
-        text-align right
-
-  header .navbar-default .navbar-nav .dropdown .dropdown-menu > li > a
-    color white
-
-  header .navbar-default .navbar-nav .dropdown .dropdown-menu
-    background #389c80
-    box-shadow none
-    border-radius 0
-  .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus, .nav-tabs > li > a:hover
-    font-size 16px
-  .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus
-    background transparent
-  .parallax .contact
-    padding 20px
-  .nav-tabs > li > a
-    font-size 16px
-  #product-detail
-    margin 0
-    .title-detail .content-title .title
-      padding-left 0
-      text-align center
-      margin-top 25%
-  .form-section
-    background transparent
-    padding 0
-    margin 30px 0 25px
-
-  .navbar-default .navbar-toggle
-    border-color transparent
-  #contact-section
-    background-size cover
-    padding 30px 0
-    h3
-      text-align center
-      font-size 18px
-  .widgets
-    margin-top -35px
-    clear both
-    padding 0
-  .box-sidebar
-    padding-top 20px
-    clear both
-    .box-header
-      clear both
-  .content-post
-    margin 20px 0 80px  0
-  .header .navbar-default .navbar-nav > li > a
-    padding 15px 25px
-  .navbar-form
-    padding 0 15px !important
-  .navbar-default .navbar-collapse, .navbar-default .navbar-form
-    border none
-    background rgba(255, 255, 255, 0.9)
-  .navbar-nav
-    background transparent
-    margin-top 0
-  .fluid-res
-    padding 0
-  #wrap
-    display none
-  .list-social-media 
-    text-align center
-    margin 0
-    padding 0  
-  .header .logo
-    margin-top 5px
-    width 75px
-  h2.title-outstanding
-    font-size 16px !important
-    padding 20px 10px !important
-  .post-out
-    display none
-  #contact-section .contact
-    border-left 1px solid transparent
-  header .navbar-default .container-fluid
-    display block
-    margin 0
-  header .navbar-default .navbar-nav > li > a
-    color white
-    padding 15px 15px
-  .social-media .social a
-    word-wrap break-word
-  #content-area
-    margin 15px 0 25px
-  .content-blog
-    margin 0 0 60px !important
-  .social .list > li > a, .social .list > li > a > span > p
-    font-size 18px
-  .carousel-caption
-    top 0
-    padding 0 15px
-    .btn
-      margin-bottom 20px
-  .height-summary
-    height auto
-  .header
-    .navbar-default
-      position inherit
-      .navbar-nav li > a
-        color #746857
-
-  .main-nav
-    background #ddd
-
-  .container-main
-    width 100%
-    padding 0
-
-  .logo
-    margin-top 0
-    width 180px
-
-  #header_area
-    padding-top 5px
-
-    background-size cover
-
-
-  .navbar-toggle
-    margin-top 25px
-    background-color transparent
-
-
-  .header_area_text h2
-    font-size 30px
-
-
-  .header_area_text
-    padding-right 0
-
-
-  .navbar-toggle .icon-bar
-    background-color #3a2103 !important
-
-  .header_area_text
-    padding-top 50px
-    padding-bottom 50px
-
-
-  .header_area_text a,
-  .story_text a,
-  .experience a,
-  .call_project a
-    padding 8px 10px
-    margin-top 0
-
-
-  .single_feature
-    margin-bottom 60px
-
-
-  .single_feature i
-    left 40%
-
-  .margin10
-    margin-bottom 20px
-  .img-gallery-single
-    padding 0
-    clear both
-    width 100%
-    height 250px
-    background-size cover
-    background-position center center
-
-  .content-post
-    .pull-left
-      float none !important
-
-  .menu-dash
-    .menu-item
-      margin-bottom 10px
-
-  .ca-phone, .ca-auth
-    text-align center
-  
+  .three-rows-nav
+    .navbar-light .navbar-toggler
+      color white
+      border-color white
+    .second-row
+      padding 15px 0 0
+      .text-left
+        text-align center !important
+      .logo
+        padding 15px
+        width 60%
+        height auto
+        margin 0 auto
+      .nav
+        position absolute
+        top -10px
+        z-index 999
+        > li > .shopping-cart
+          i
+            color white
+            font-size 38px
+            padding 5px
+          span
+            background-color dark
+            color white
+        .btn-dark
+          background-color transparent
+          border-color transparent
       
   
 /* Wide Mobile Layout: 480px. */
