--- a/app/css/main.styl
+++ b/app/css/main.styl
@@ -4,6 +4,8 @@
 @import "core/reset.styl"
 @import "core/navs.styl"
 @import "core/components.styl"
+@import "core/loader.styl"
+@import "core/print.styl"
 @import "layout/layout.styl"
 @import "layout/responsive.styl"
 @import "layout/tabs.styl"
