--- a/app/templates/shop/checkout.html
+++ b/app/templates/shop/checkout.html
@@ -1,5 +1,5 @@
 <div id="temp-checkout">
-    <div id="content-area">
+    <div class="content-area">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12 box-default" ng-if="Payment.shiping">
@@ -10,12 +10,12 @@
                         <table class="table">
                             <tbody>
                             <tr>
-                                <td><strong>Estado:</strong> {{Payment.addresship.stateName}}</td>
-                                <td><strong>Ciudad:</strong> {{Payment.addresship.cityName}}</td>
+                                <td><strong>Estado:</strong> {{Payment.addresship.stateName}}.</td>
+                                <td><strong>Ciudad:</strong> {{Payment.addresship.cityName}}.</td>
                                 <td><strong>Dirección:</strong> {{Payment.addresship.address}},
-                                    {{Payment.addresship.neighborhood }}
+                                    {{Payment.addresship.neighborhood }}.
                                 </td>
-                                <td><strong>Código Postal:</strong> {{Payment.addresship.zip}}</td>
+                                <td><strong>Código Postal:</strong> {{Payment.addresship.zip}}.</td>
                             </tr>
                             </tbody>
                         </table>
