--- a/app/templates/shop/partials/cart-details.html
+++ b/app/templates/shop/partials/cart-details.html
@@ -46,7 +46,7 @@
             </div>
             <div class="container" ng-if="Payment.shiping">
                 <div class="row">
-                    <div class="col-md-9 no-padding">
+                    <div class="col-md-9">
                         <md-input-container md-no-float class="md-block">
                             <input type="text" ng-model="ShopCart.coupon"
                                    name="name" placeholder="Código de cupón"
