--- a/app/css/base/variables.styl
+++ b/app/css/base/variables.styl
@@ -14,12 +14,15 @@ default = #ddd
 dark = #777
 
 /* variables */
+breadcrumbClr = #e9ecef
 shoppingCart = dark
 qtyCartClr = warning
 wSlider = 100% //width slidet home
 hSlider = 400px //slider for home height
 hSmallSlider = 330px //slider for products or small slider height
 wSmallSlider = 100% //slider for products or small slider width
+hShopCart = 100px //shopcart image size height
+wShopCart = 100% //shopcart image size width
 
 /* font style */
 font-size = 16px
