--- a/app/css/core/navs.styl
+++ b/app/css/core/navs.styl
@@ -22,6 +22,7 @@
     font-size 16px
     top -15px
     right 0
+    font-size 13px
     width 20px
     height 20px
 
@@ -45,7 +46,15 @@
         background-color white
         border-left-color white
   .second-row
-    padding 15px 0
+    padding 15px 0 0
+    .dropdown
+      margin-top 10px
+    .md-input-container.md-icon-right
+      width 100%
+      margin 10px 0 0
+      padding-right 0 !important
+    .logo
+      height 75px
     .nav
       margin-top 10px
       > li > .shopping-cart
