--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -53,7 +53,7 @@
                                                  style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
                                         </div>
                                         <div class="box-container">
-                                            <p>{{ product.name }}</p>
+                                            <p class="box-title">{{ product.name }}</p>
                                             <h4 class="text-warning">{{ product.price | currency }}</h4>
                                         </div>
                                     </a>
