--- a/app/templates/shop/partials/paypal-cancel.html
+++ b/app/templates/shop/partials/paypal-cancel.html
@@ -1,4 +1,4 @@
-<div id="content-area">
+<div class="content-area">
     <div class="container">
         <div class="col-md-offset-2 col-md-8">
             <h2 class="text-center">{{ Purchase.purchase.customerName }}</h2>
