--- a/app/templates/shop/partials/purchase-completed.html
+++ b/app/templates/shop/partials/purchase-completed.html
@@ -1,4 +1,4 @@
-<div id="content-area" class="print-purchase">
+<div class="content-area print-purchase">
     <div class="container no-padding text-justify">
         <div class="col-md-offset-2 col-md-8">
             <h2 class="text-center">{{ Purchase.purchase.customerName }}</h2>
